--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "@mui/styled-engine-sc": "^5.12.0",
     "latest": "^0.2.0",
     "react": "^18.2.0",
-    "react-audio-player": "^0.17.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-player": "^2.12.0",
     "react-router-dom": "^6.10.0",
     "styled-components": "^5.3.9"
   },
