--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^4.8.0",
     "react-player": "^2.12.0",
     "react-router-dom": "^6.10.0",
+    "react-simple-image-slider": "^2.4.1",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
